--- a/templates/svc.yaml
+++ b/templates/svc.yaml
@@ -1,16 +1,19 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: "{{.Values.Name}}"
+  name: {{ template "kafka-manager.servicename" . }}
   labels:
-    k8s-app: {{.Values.Name}}
-    heritage: {{ .Release.Service | quote }}
-    release: {{ .Release.Name | quote }}
-    chart: "{{.Chart.Name}}-{{.Chart.Version}}"
+    app: {{ template "kafka-manager.name" . }}
+    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
 spec:
-  type: "LoadBalancer"
+  type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.http.port }}
-      targetPort: {{ .Values.http.port }}
+    - port: {{ .Values.service.externalPort }}
+      targetPort: {{ .Values.service.internalPort }}
+      protocol: TCP
+      name: kafka-manager
   selector:
-    k8s-app: "{{.Release.Name}}-{{.Values.Name}}"
+    app: {{ template "kafka-manager.name" . }}
+    release: {{ .Release.Name }}
