Add liveness probe and increase job backoff

--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -28,6 +28,10 @@ spec:
             httpGet:
               path: /
               port: {{ .Values.service.internalPort }}
+          livenessProbe:
+            httpGet:
+              path: /
+              port: {{ .Values.service.internalPort }}
           resources:
 {{ toYaml .Values.resources | indent 12 }}
     {{- if .Values.nodeSelector }}
