--- a/templates/jobs.yaml
+++ b/templates/jobs.yaml
@@ -29,3 +29,4 @@ spec:
         - "-c"
         - {{ include "kafka-manager.bootstrapShellCommand" . | quote }}
       restartPolicy: Never
+  backoffLimit: 20
